@@ -10,6 +10,9 @@ ver 0.16.5 (2010/??/??)
   - ffmpeg: higher precision timestamps
   - ffmpeg: don't require key frame for seeking
   - fix CUE track seeking
+* player:
+  - make seeking to CUE track more reliable
+  - the "seek" command works when MPD is stopped
 * WIN32: close sockets properly
 * install systemd service file if systemd is available
 
